tests/models/struct/named/u64/fail/max_items.rs
use dade::model;
#[model]
struct TestModel {
    #[field(max_items = 2)]
    value: u64,
}
fn main() {}
